--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,6 +1,8 @@
 controllers:
     resource: ../../src/Controller/
     type: annotation
+    defaults:
+      _formats: json
 
 kernel:
     resource: ../../src/Kernel.php
