--- a/.env
+++ b/.env
@@ -26,3 +26,9 @@ APP_SECRET=57c9ab4f7dc8c034ecc41ad9eb85d1f0
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=a085d24274bf270daf819ceacaf49913
+###< lexik/jwt-authentication-bundle ###
